<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:chip="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.tugraz.recipro.recipro.RecipesFragment">

    <TableLayout
        android:id="@+id/tlFilters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:stretchColumns="0"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchbar">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <at.tugraz.recipro.views.OurChipView
                android:id="@+id/ocvTagView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:paddingBottom="4dp"
                android:paddingTop="8dp"
                chip:chip_corner_radius="6dp"
                chip:chip_line_spacing="4dp"
                chip:chip_padding="10dp"
                chip:chip_side_padding="10dp"
                chip:chip_spacing="4dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvIngredientInclude"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/with_ing"
                tools:layout_editor_absoluteX="107dp"
                tools:layout_editor_absoluteY="37dp" />

            <AutoCompleteTextView
                android:id="@+id/atIngredientInclude"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvIngredientExclude"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/without_ing"
                tools:layout_editor_absoluteX="107dp"
                tools:layout_editor_absoluteY="37dp" />

            <AutoCompleteTextView
                android:id="@+id/atIngredientExclude"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvMinTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/min_time"
                tools:layout_editor_absoluteX="107dp"
                tools:layout_editor_absoluteY="37dp" />

            <EditText
                android:id="@+id/etMinTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvMaxTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/max_time"
                tools:layout_editor_absoluteX="107dp"
                tools:layout_editor_absoluteY="37dp" />

            <EditText
                android:id="@+id/etMaxTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvAllergenes"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/allergens"
                tools:layout_editor_absoluteX="107dp"
                tools:layout_editor_absoluteY="37dp" />

            <at.tugraz.recipro.views.AllergenSpinner
                android:id="@+id/isAllergenes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                chip:refChipView="@+id/ocvTagView" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvRecipeType"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/type_of_food"
                tools:layout_editor_absoluteX="107dp"
                tools:layout_editor_absoluteY="37dp" />

            <Spinner
                android:id="@+id/spRecipeType"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvMinRating"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/min_rating"
                tools:layout_editor_absoluteX="107dp"
                tools:layout_editor_absoluteY="37dp" />

            <RatingBar
                android:id="@+id/rbMinRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:isIndicator="false"
                android:numStars="5"
                android:rating="0"
                android:stepSize="0.5"
                chip:layout_constraintEnd_toEndOf="parent"
                chip:layout_constraintTop_toBottomOf="parent" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tvFilterFavorites"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/only_favorites"
                tools:layout_editor_absoluteX="107dp"
                tools:layout_editor_absoluteY="37dp" />

            <CheckBox
                android:id="@+id/cbFavorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tvOwned"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/owned_ingredients"
                tools:layout_editor_absoluteX="107dp"
                tools:layout_editor_absoluteY="37dp" />

            <CheckBox
                android:id="@+id/cbOwned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

    </TableLayout>

    <SearchView
        android:id="@+id/searchbar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tlFilters"
        app:layout_constraintEnd_toStartOf="@+id/ibFilters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tlFilters" />

    <ImageButton
        android:id="@+id/ibFilters"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tlFilters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_filter_list_black_24dp" />

</android.support.constraint.ConstraintLayout>
