<resources>
    <string name="app_name">ReciPro</string>
    <string name="search_hint">Search for recipes</string>
    <string name="error_connect">Could not connect to server</string>
    <string name="with_ing">Include Ingredient</string>
    <string name="without_ing">Exclude Ingredient</string>
    <string name="min_time">Min Time</string>
    <string name="max_time">Max Time</string>
    <string name="allergens">Exclude Allergens</string>
...
    <string name="min_rating">Min Rating</string>
    <string name="only_favorites">Only Favorites</string>
    <string name="owned_ingredients">Only Owned Ingredients</string>
    <string name="recipe">Recipe</string>
    <string name="ingredients_header">Ingredients:</string>
    <string name="description_header">Description:</string>
    <string name="type_dessert">Dessert</string>
    <string name="type_snack">Snack</string>
    <string name="type_main">Main course</string>
    <string name="nav_home">Home</string>
    <string name="nav_pantry">My Pantry</string>
    <string name="nav_grocery_list">Grocery List</string>
    <string name="minutes">min</string>
...
